--- a/templates/admin/admin_layout.html
+++ b/templates/admin/admin_layout.html
@@ -306,6 +306,12 @@
               <span class="menu-title">Student Attendance</span>
             </a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'batch_management' %}">
+              <i class="icon-paper menu-icon"></i>
+              <span class="menu-title">Batch Management</span>
+            </a>
+          </li>
         </ul>
       </nav>
 
