--- a/templates/admin/edit_batch.html
+++ b/templates/admin/edit_batch.html
@@ -10,37 +10,37 @@
                 <div class="col-md-6 grid-margin stretch-card">
                     <div class="card">
                         <div class="card-body">
-                            <h4 class="card-title text-center mb-4">Update Semester</h4>
+                            <h4 class="card-title text-center mb-4">Update Batch</h4>
 
-                            <form class="forms-sample" method="post" action="{% url 'edit_semester' semester.semester_id %}">
+                            <form class="forms-sample" method="post" action="{% url 'edit_batch' batch.batch_id %}">
                                 {% csrf_token %}
                                 <div class="form-group ">
-                                     <label for="exampleInputUsername2" class="col-sm-3">Semester</label>
-                                    <input type="text" name="semester" class="form-control" id="exampleInputUsername2" value="{{ semester.semester_number }}" placeholder="Semester">
+                                     <label for="exampleInputUsername2" class="col-sm-3">Batch Name</label>
+                                    <input type="text" name="batch_name" class="form-control" id="exampleInputUsername2" value="{{ batch.batch_name }}" placeholder="Batch Name">
                                 </div>
                                 <div class="form-group ">
                                 <label for="exampleInputUsername2" class="col-sm-3 ">Department Name</label>
                                 <select name="department" class="form-control" >
-                                    <option value="{{ sem_department.department_id }}" selected>{{ sem_department.department_name }}</option>
-                                        {% for dept in department %}
-                                            {% if dept.department_id != sem_department.department_id %}
+                                    <option value="{{ current_department.department_id }}" selected>{{ current_department.department_name }}</option>
+                                        {% for dept in departments %}
+                                            {% if dept.department_id != current_department.department_id %}
                                                 <option value="{{ dept.department_id }}">{{ dept.department_name }}</option>
                                             {% endif %}
                                         {% endfor %}
                                 </select>
                             </div>
                             <div class="form-group ">
-                                <label for="exampleInputUsername2" class="col-sm-3 ">Batch</label>
-                                <select name="batch" class="form-control" >
-                                    <option value="" disabled selected>--Select Batch--</option>
-                                    {% for b in batches %}
-                                        <option value="{{ b.batch_id }}" {% if semester.fk_batch_id == b.batch_id %}selected{% endif %}>{{ b.batch_name }}</option>
+                                <label for="exampleInputUsername2" class="col-sm-3 ">Academic Year</label>
+                                <select name="academic_year" class="form-control" >
+                                    <option value="" disabled selected>--Select Academic Year--</option>
+                                    {% for ay in academic_years %}
+                                        <option value="{{ ay.academic_year }}" {% if current_academic.academic_year == ay.academic_year %}selected{% endif %}>{{ ay.academic_year }}</option>
                                     {% endfor %}
                                 </select>
                             </div>
                             <div class="text-center mt-4">
                                 <button type="submit" class="btn btn-primary me-2">Update</button>
-                                <a href="{% url 'semester' %}" class="btn btn-danger me-2 ">Back</a>
+                                <a href="{% url 'batch_management' %}" class="btn btn-danger me-2 ">Back</a>
                                 </div>
                             </form>
                         </div>
