--- a/templates/admin/semester.html
+++ b/templates/admin/semester.html
@@ -11,13 +11,13 @@
                     <div class="card-body">
                         <h4 class="card-title">Semesters</h4>
 
-                        </p>
                         <div class="table-responsive">
                             <table class="table" >
                                 <thead>
                                     <tr>
-                                        <th>Semester Name</th>
-                                        <th>Department Name</th>
+                                        <th>Semester</th>
+                                        <th>Department</th>
+                                        <th>Batch</th>
                                         <th>Action</th>
                                     </tr>
                                 </thead>
@@ -26,6 +26,7 @@
                                     <tr>
                                         <td>{{ s.semester.semester_number }}</td>
                                         <td>{{ s.department.department_name }}</td>
+                                        <td>{{ s.batch.batch_name|default:"N/A" }}</td>
                                         <td>
                                             <div class="template-demo">                  
                                                 <a href="{% url 'edit_semester' s.semester.semester_id %}">Edit</a> |
@@ -51,8 +52,13 @@
                         <form class="forms-sample" method="post" action="{% url 'add_semester' %}">
                             {% csrf_token %}
                             <div class="form-group ">
-                                <label for="exampleInputUsername2" class="col-sm-3">Semester</label>
-                                    <input type="text" name="semester" class="form-control" id="exampleInputUsername2"placeholder="Semester" required>
+                                <label for="exampleInputUsername2" class="col-sm-3 ">Batch</label>
+                                <select name="batch" class="form-control" required >
+                                    <option value="" disabled selected>--Select---</option>
+                                    {% for b in batches  %}
+				                        <option value="{{ b.batch_name }}">{{ b.batch_name }}</option>
+				                    {% endfor %}
+                                </select>
                             </div>
                             <div class="form-group ">
                                 <label for="exampleInputUsername2" class="col-sm-3 ">Department Name</label>
@@ -62,6 +68,10 @@
 				                        <option value="{{ i.department_id }}">{{ i.department_name }}</option>
 				                    {% endfor %}
                                 </select>
+                            </div>
+                            <div class="form-group ">
+                                <label for="exampleInputUsername2" class="col-sm-3">Semester</label>
+                                    <input type="text" name="semester" class="form-control" id="exampleInputUsername2"placeholder="Semester" required>
                             </div>
                             
                             <button type="submit" class="btn btn-primary me-2">Add</button>
