--- a/templates/student/student_layout.html
+++ b/templates/student/student_layout.html
@@ -146,7 +146,7 @@
                 <i class="ti-settings text-primary "></i> My Profile </a>
               <a href="{%url 'change_password_std'  %}" class="dropdown-item">
                 <i class="ti-unlock text-primary"></i> Change Password </a>
-              <a class="dropdown-item">
+              <a class="dropdown-item" href="{% url 'logout_view_student' %}">
                 <i class="ti-power-off text-primary"></i> Logout </a>
 
             </div>
