--- a/templates/admin/batch_management.html
+++ b/templates/admin/batch_management.html
@@ -9,15 +9,15 @@
             <div class="col-md-6 grid-margin stretch-card">
                 <div class="card">
                     <div class="card-body">
-                        <h4 class="card-title">Branch</h4>
+                        <h4 class="card-title">Batch</h4>
 
                         </p>
                         <div class="table-responsive border rounded">
                             <table class="table table-bordered table-striped">
                                 <thead>
                                     <tr>
-                                        <th>Branch Name</th>
-                                        <th>Course </th>
+                                        <th>Batch</th>
+                                        <th>Department </th>
                                         <th>Academic Year</th>
                                         <th>Action</th>
                                     </tr>
@@ -47,17 +47,17 @@
             <div class="col-md-6 grid-margin stretch-card">
                 <div class="card">
                     <div class="card-body">
-                        <h4 class="card-title">Add Branch</h4>
+                        <h4 class="card-title">Add Batch</h4>
 
                         <form class="forms-sample" method="post" action="{% url 'batch_management' %}">
                             {% csrf_token %}
                             <div class="form-group">
-                                <label for="batch_name">Branch</label>
+                                <label for="batch_name">Batch</label>
                                 <input type="text" name="batch_name" class="form-control" id="batch_name" 
-                                value="{{ batch_name_value|default:'' }}" placeholder="Enter Branch Name" required>
+                                value="{{ batch_name_value|default:'' }}" placeholder="Enter Batch Name" required>
                             </div>
                             <div class="form-group">
-                                <label for="department">Course</label>
+                                <label for="department">Department</label>
                                 <select name="department" class="form-control" onchange="this.form.submit()" required>
                                     <option value="" disabled selected>--Select Department--</option>
                                     {% for dept in departments %}
