--- a/templates/admin/academic_year.html
+++ b/templates/admin/academic_year.html
@@ -16,17 +16,15 @@
                             <table class="table">
                                 <thead>
                                     <tr>
-                                        <th>Department Name</th>
-                                        <th>Semester</th>
+                                        <th>Batch</th>
                                         <th>Academic Year</th>
-                                        <td>Action</td>
+                                        <th>Action</th>
                                     </tr>
                                 </thead>
                                 <tbody>
                                     {% for s in data %}
                                     <tr>
-                                        <td>{{ s.department.department_name }}</td>
-                                        <td>{{ s.semester.semester_number }}</td>
+                                        <td>{{ s.batch.batch_name }}</td>
                                         <td>{{ s.academic.academic_year }}</td>
                                         <td>
                                             <div class="template-demo">
@@ -52,27 +50,18 @@
                         <form class="forms-sample" method="post" action="{% url 'academic_year' %}">
                             {% csrf_token %}
                             <div class="form-group">
-                                <label for="exampleInputPassword4">Department</label>
-                                <select name="department" class="form-control" onchange="this.form.submit()" required>
-                                    <option value="" disabled selected>--Select Department--</option>
-                                    {% for dept in department %}
-                                    <option value="{{ dept.department_id }}" {% if selected_department == dept.department_id %} selected {% endif %}>{{dept.department_name }}</option>
+                                <label for="batch">Batch</label>
+                                <select name="batch" class="form-control" required>
+                                    <option value="" disabled selected>--Select Batch--</option>
+                                    {% for batch in batches %}
+                                    <option value="{{ batch.batch_id }}">{{ batch.batch_name }}</option>
                                     {% endfor %}
                                 </select>
                             </div>
                             <div class="form-group">
-                                <label for="exampleInputPassword4">Semester</label>
-                                <select name="semester" class="form-control" required>
-                                    <option value="" disabled selected>--Select Semester--</option>
-                                    {% for sem in semesters %}
-                                    <option value="{{ sem.semester_id }}">{{ sem.semester_number }}</option>
-                                    {% endfor %}
-                                </select>
-                            </div>
-                            <div class="form-group">
-                                    <label for="exampleInputPassword4">Academic year</label>
-                                    <input type="text" name="academic_year" class="form-control" id="exampleInputPassword4" 
-                                    placeholder="Year"  required>
+                                    <label for="academic_year">Academic Year</label>
+                                    <input type="text" name="academic_year" class="form-control" id="academic_year" 
+                                    placeholder="Enter Academic Year (e.g., 2023-2024)" required>
                             </div>
 
                             <button type="submit" class="btn btn-primary me-2">Add</button>
