--- a/templates/admin/batch_management.html
+++ b/templates/admin/batch_management.html
@@ -18,7 +18,6 @@
                                     <tr>
                                         <th>Batch</th>
                                         <th>Department </th>
-                                        <th>Academic Year</th>
                                         <th>Action</th>
                                     </tr>
                                 </thead>
@@ -27,7 +26,6 @@
                                     <tr>
                                         <td>{{ item.batch.batch_name }}</td>
                                         <td>{{ item.department.department_name|default:"N/A" }}</td>
-                                        <td>{{ item.academic.academic_year|default:"N/A" }}</td>
                                         <td>
                                             <div class="template-demo">
                                                 <a href="{% url 'edit_batch' item.batch.batch_id %}" class="btn btn-warning btn-sm">Edit</a>
@@ -52,11 +50,6 @@
                         <form class="forms-sample" method="post" action="{% url 'batch_management' %}">
                             {% csrf_token %}
                             <div class="form-group">
-                                <label for="batch_name">Batch</label>
-                                <input type="text" name="batch_name" class="form-control" id="batch_name" 
-                                value="{{ batch_name_value|default:'' }}" placeholder="Enter Batch Name" required>
-                            </div>
-                            <div class="form-group">
                                 <label for="department">Department</label>
                                 <select name="department" class="form-control" onchange="this.form.submit()" required>
                                     <option value="" disabled selected>--Select Department--</option>
@@ -66,15 +59,11 @@
                                 </select>
                             </div>
                             <div class="form-group">
-                                <label for="academic_year">Academic Year</label>
-                                <select name="academic_year" class="form-control" required>
-                                    <option value="" disabled selected>--Select Academic Year--</option>
-                                    {% for ay in academic_years %}
-                                    <option value="{{ ay.academic_year }}">{{ ay.academic_year }}</option>
-                                    {% endfor %}
-                                </select>
+                                <label for="batch_name">Batch Name</label>
+                                <input type="text" name="batch_name" class="form-control" id="batch_name" 
+                                value="{{ batch_name_value|default:'' }}" placeholder="Enter Batch Name" required>
                             </div>
-
+                            
 
                             <button type="submit" class="btn btn-primary me-2">Add</button>
                             <button type="reset" class="btn btn-light">Cancel</button>
