--- a/templates/admin/semester.html
+++ b/templates/admin/semester.html
@@ -15,18 +15,18 @@
                             <table class="table" >
                                 <thead>
                                     <tr>
-                                        <th>Semester</th>
-                                        <th>Department</th>
                                         <th>Batch</th>
+                                        <th>Academic Year</th>
+                                        <th>Semester</th>
                                         <th>Action</th>
                                     </tr>
                                 </thead>
                                 <tbody>
                                     {% for s in data %}
                                     <tr>
-                                        <td>{{ s.semester.semester_number }}</td>
-                                        <td>{{ s.department.department_name }}</td>
                                         <td>{{ s.batch.batch_name|default:"N/A" }}</td>
+                                        <td>{{ s.academic.academic_year|default:"N/A" }}</td>
+                                        <td>{{ s.semester.semester_number }}</td>
                                         <td>
                                             <div class="template-demo">                  
                                                 <a href="{% url 'edit_semester' s.semester.semester_id %}">Edit</a> |
@@ -49,29 +49,29 @@
                     <div class="card-body">
                         <h4 class="card-title">Add Semester</h4>
 
-                        <form class="forms-sample" method="post" action="{% url 'add_semester' %}">
+                        <form class="forms-sample" method="post" action="{% url 'semester' %}" id="semester-form">
                             {% csrf_token %}
                             <div class="form-group ">
                                 <label for="exampleInputUsername2" class="col-sm-3 ">Batch</label>
-                                <select name="batch" class="form-control" required >
-                                    <option value="" disabled selected>--Select---</option>
+                                <select name="batch" class="form-control" onchange="document.getElementById('semester-form').submit()" required>
+                                    <option value="" disabled selected>--Select batch--</option>
                                     {% for b in batches  %}
-				                        <option value="{{ b.batch_name }}">{{ b.batch_name }}</option>
-				                    {% endfor %}
+                                        <option value="{{ b.batch_name }}" {% if selected_batch == b.batch_name %} selected {% endif %}>{{ b.batch_name }}</option>
+                                    {% endfor %}
                                 </select>
                             </div>
                             <div class="form-group ">
-                                <label for="exampleInputUsername2" class="col-sm-3 ">Department Name</label>
+                                <label for="exampleInputUsername2" class="col-sm-3 ">Academic Year</label>
                                 <select name="department" class="form-control" required >
-                                    <option value="" disabled selected>--Select---</option>
+                                    <option value="" disabled selected>--Select year--</option>
                                     {% for i in departments  %}
-				                        <option value="{{ i.department_id }}">{{ i.department_name }}</option>
-				                    {% endfor %}
+                                        <option value="{{ i.academic_id }}">{{ i.academic_year }}</option>
+                                    {% endfor %}
                                 </select>
                             </div>
                             <div class="form-group ">
                                 <label for="exampleInputUsername2" class="col-sm-3">Semester</label>
-                                    <input type="text" name="semester" class="form-control" id="exampleInputUsername2"placeholder="Semester" required>
+                                    <input type="text" name="semester" class="form-control" id="exampleInputUsername2" placeholder="Semester" required>
                             </div>
                             
                             <button type="submit" class="btn btn-primary me-2">Add</button>
