--- a/templates/attendanceofficer/attendanceofficer_layout.html
+++ b/templates/attendanceofficer/attendanceofficer_layout.html
@@ -171,7 +171,7 @@
       <nav class="sidebar sidebar-offcanvas" id="sidebar">
         <ul class="nav">
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'admin' %}">
+            <a class="nav-link" href="{% url 'attendanceofficer' %}">
               <i class="icon-grid menu-icon"></i>
               <span class="menu-title">Dashboard</span>
             </a>
