--- a/templates/hod/list_assign_subject.html
+++ b/templates/hod/list_assign_subject.html
@@ -13,10 +13,10 @@
                 </div>
             </div>
             <div class="table-responsive">
-                <table class="table table-bordered table-striped text-center">
+                <table class="table table-striped table-borderless text-center">
                     <thead>
                         <tr>
-                            <th>Department</th>
+                            <th>Batch</th>
                             <th>Subject Name</th>
                             <th>Semester</th>
                             <th>Assigned Faculty</th>
@@ -27,7 +27,7 @@
                     <tbody>
                         {% for i in data %}
                         <tr>
-                            <td>{{ i.department.department_name }}</td>
+                            <td>{{ i.batch.batch_name }}</td>
                             <td>{{ i.subject.subject_name }}</td>
                             <td>{{ i.semester.semester_number }}</td>
                             <td>{{ i.faculty.full_name }}</td>
