--- a/templates/student/student_layout.html
+++ b/templates/student/student_layout.html
@@ -171,7 +171,7 @@
       <!-- partial:partials/_sidebar.html -->
       <nav class="sidebar sidebar-offcanvas" id="sidebar">
         <ul class="nav">
-          <li class="nav-item">
+          <li class="nav-item{% if 'student' in request.path and request.path == '/student_dashboard/student/' %} active{% endif %}">
             <a class="nav-link" href="{% url 'student' %}">
               <i class="icon-grid menu-icon"></i>
               <span class="menu-title">Dashboard</span>
