--- a/templates/attendanceofficer/attendanceofficer_layout.html
+++ b/templates/attendanceofficer/attendanceofficer_layout.html
@@ -170,7 +170,7 @@
       <!-- partial:partials/_sidebar.html -->
       <nav class="sidebar sidebar-offcanvas" id="sidebar">
         <ul class="nav">
-          <li class="nav-item">
+          <li class="nav-item{% if 'attendanceofficer' in request.path and request.path == '/attendanceofficer_dashboard/attendanceofficer/' %} active{% endif %}">
             <a class="nav-link" href="{% url 'attendanceofficer' %}">
               <i class="icon-grid menu-icon"></i>
               <span class="menu-title">Dashboard</span>
