--- a/templates/faculty/faculty_layout.html
+++ b/templates/faculty/faculty_layout.html
@@ -170,7 +170,7 @@
       <!-- partial:partials/_sidebar.html -->
       <nav class="sidebar sidebar-offcanvas" id="sidebar">
         <ul class="nav">
-          <li class="nav-item">
+          <li class="nav-item{% if 'faculty' in request.path and request.path == '/faculty_dashboard/faculty/' %} active{% endif %}">
             <a class="nav-link" href="{% url 'faculty' %}">
               <i class="icon-grid menu-icon"></i>
               <span class="menu-title">Dashboard</span>
